--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ dependencies = [
     "pyppeteer",
     "html2text",
     "rich",
+    "fastapi>=0.121.0",
+    "fastapi-users[sqlalchemy]>=15.0.1",
+    "uvicorn[standard]>=0.34.3",
+    "pydantic-settings>=2.11.0",
 ]
 
 [project.optional-dependencies]
