--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "fastapi-users[sqlalchemy]>=15.0.1",
     "uvicorn[standard]>=0.34.3",
     "pydantic-settings>=2.11.0",
+    "msal>=1.34.0",
 ]
 
 [project.optional-dependencies]
