--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = [
     "uvicorn[standard]>=0.34.3",
     "pydantic-settings>=2.11.0",
     "msal>=1.34.0",
+    "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.10.1",
+    "python-multipart>=0.0.20",
 ]
 
 [project.optional-dependencies]
