docs: Add comprehensive User Registration flow article

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,7 @@ notes.txt
 webapp/backend/core/refresh_token.txt
 webapp/backend/databse.db
 webapp/.tokens
+
+## Articles
+Private_Articles
+# checklists
