feat[frontend]: improve email detail page layout, scrollable sidebar, conversation highlighting, and responsive design

--- a/.gitignore
+++ b/.gitignore
@@ -177,4 +177,4 @@ webapp/.tokens
 ## Articles
 Private_Articles
 # checklists
-Articles/3_EMAIL_SYNC_ARTICLE.md
+# Articles/3_EMAIL_SYNC_ARTICLE.md
