--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -8,7 +8,7 @@ python-multipart==0.0.12
 
 # ===== Database =====
 sqlalchemy==2.0.35
-psycopg2-binary==2.9.9  # PostgreSQL adapter (Render uses PostgreSQL)
+psycopg2-binary==2.9.10  # PostgreSQL adapter - Python 3.13 compatible
 alembic==1.13.3  # Database migrations (for future use)
 
 # ===== Data Validation =====
