--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,11 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
-lib64/
+# Python lib directories only (not frontend lib/)
+/lib/
+/lib64/
+src/lib/
+src/lib64/
 parts/
 sdist/
 var/
